--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,12 +1,5 @@
-body {
-    margin: 0 0 0 0;
-    padding: 90px 0 0 0;
-    height: 3000px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-p {
-    background-color: rgba(128, 0, 128, 0.2);
+html {
+    font-family: Raleway, Verdana, Arial;
 }
 
 header {
@@ -18,5 +11,22 @@ header {
     top: 0;
     right: 0;
     left: 0;
+    padding-right: 20px;
+    
+}
 
+body {
+    margin: 0;
+    padding-top: 80px;
+    height: 3000px;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+}
+
+button {
+  font-family: Verdana;
 }
