--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,25 +5,6 @@
     justify-content: center;
 }
 
-.website-title {
-  background-color: rgba(255, 0, 0, 0.403);
-}
-
-
-/* Top Navigation Bar */
-/* .top-navigation-bar {
-    display: flex;
-    background-color: #24ABC4;
-    overflow: hidden;
-    justify-content: space-between;
-} */
-
-.top-navigation-bar-links {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgba(255, 0, 0, 0.468);
-}
-
 .top-navigation-bar a {
     border: none;
     overflow: hidden;
@@ -31,16 +12,20 @@
 
 .nav-button {
     cursor: pointer;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
+    color: white;
+    font-size: 16px;
     font-weight: bold;
-    padding: 0px 10px 0px 10px;
-    height: 100%;
+    padding: 5px 16px;
     border: none;
+    border-radius: 19px;
     transition: 300ms;
+
 }
 
 .nav-button:hover {
-    background-color: rgb(203, 203, 203);
+    background-color: white;
+    color: black;
 }
 
 /* Main Container */
@@ -49,5 +34,27 @@
 }
 
 .search-icon {
-    height: 50px;
+    height: 30px;
+}
+.cover-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cover-image {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    filter: brightness(0.3);
+}
+
+.cover-image-text {
+    position: absolute;
+    color: white;
+    background-color: transparent;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    font-family: Verdana;
 }
