--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -11,13 +11,14 @@ header {
     top: 0;
     right: 0;
     left: 0;
+    height: 100px;
     padding-right: 20px;
     z-index: 100;
 }
 
 body {
     margin: 0;
-    padding-top: 80px;
+    padding-top: 100px;
     height: 3000px;
 }
 
