--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,20 +33,19 @@
     padding: 0px 10px 0px 10px;
 }
 
-.search-icon {
-    height: 30px;
-}
 .cover-image-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .cover-image {
     width: 100%;
-    height: 300px;
+    height: 250px;
     object-fit: cover;
-    filter: brightness(0.3);
+    filter: blur(5px) brightness(0.4);
+    transform: scale(1.1);
 }
 
 .cover-image-text {
@@ -58,3 +57,4 @@
     text-align: center;
     font-family: Verdana;
 }
+
