--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,3 @@
-.main-container {
-    padding: 0px 10px 0px 10px;
-}
-
 .cover-image-container {
     display: flex;
     justify-content: center;
@@ -13,7 +9,7 @@
     width: 100%;
     height: 250px;
     object-fit: cover;
-    filter: blur(5px) brightness(0.4);
+    filter: blur(8px) brightness(0.4);
     transform: scale(1.1);
 }
 
@@ -25,4 +21,8 @@
     font-weight: bold;
     text-align: center;
     font-family: Verdana;
+}
+
+.text-container {
+    padding-left: 10px;
 }
